# pfc-crawler

./: .gitignore  01_schema.sql  02_schema.sql  docker-compose.yml  ejemplo_widget.html  pyproject.toml  run.py  test_chatbot_streaming.py  test_rag.py
.claude/: settings.local.json
app/: main.py  pipeline.py
app/core/: config.py  database.py  dependencies.py  job_manager.py  openai.py  session_manager.py
app/crawler/: linkers.py  models.py  naming.py  selectors.py  writers.py
app/db/: boostrap.py  engine.py  interfaces.py  postgres_store.py
app/mcp/: server.py
app/models/: memory.py  rag.py
app/repositories/: chunker.py  crawler.py  embedding.py  ingest.py  md_parser.py  rag_repository.py  repair_and_rescrape.py  upserts_bulk.py
app/routes/: crawler.py  rag.py
app/scripts/: indexing_pipeline.py
app/services/: crawler.py  ingestion.py  rag.py  repair.py  retrieval.py  search.py
app/utils/: prompts.py  urls.py
