[project]
name = "crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "asyncpg>=0.31.0",
    "crawl4ai>=0.7.8",
    "fastapi[standard]>=0.116.1",
    "httpx[http2]>=0.28.1",
    "langchain>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-openai>=0.3.30",
    "langchain-text-splitters>=0.3.9",
    "langgraph>=0.6.5",
    "llama-index>=0.14.3",
    "llama-index-embeddings-openai>=0.5.1",
    "llama-index-llms-openai>=0.5.6",
    "llama-index-vector-stores-postgres>=0.7.2",
    "lxml>=5.4.0",
    "markdown-it-py>=4.0.0",
    "openai>=1.99.6",
    "pgvector>=0.4.1",
    "psycopg[binary]>=3.2.9",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-frontmatter>=1.1.0",
    "readability-lxml>=0.8.4.1",
    "requests>=2.32.4",
    "selectolax>=0.3.32",
    "sentence-transformers>=5.1.0",
    "simhash>=2.1.2",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.24",
    "tiktoken>=0.10.0",
    "trafilatura>=2.0.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
